--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Shared/_Layout.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Shared/_Layout.cshtml
@@ -8,6 +8,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/sweetalert")
+    @Scripts.Render("~/bundles/jqueryMask")
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/fontawesome")
     @Styles.Render("~/Content/css")
