--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Produto/Cadastrar.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Produto/Cadastrar.cshtml
@@ -12,7 +12,7 @@
         </div>
         <div class="col-md-3 d-flex justify-content-end">
             <button type="submit" class="btn btn-outline-primary">
-                <i class="far fa-save"> Salvar</i>
+                <i class="fas fa-save"> Salvar</i>
             </button>
             <button type="button" onclick="location.href='@Url.Action("Index", "Produto")'" class="btn btn-outline-secondary">
                 <i class="fas fa-list-alt"> Cancelar</i>
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="form-group col-md-6">
             <label class="font-weight-bold">Valor: (R$)</label>
-            @Html.TextBoxFor(model => model.Valor, new { id="txtValor", @class = "form-control" })
+            @Html.TextBoxFor(model => model.Valor, new { id = "txtValor", @class = "form-control" })
         </div>
         <div class="form-group col-md-6">
             <label class="font-weight-bold">Categoria: </label>
@@ -53,16 +53,49 @@
     <div class="row">
         <div class="form-group col-md-12">
             <label class="font-weight-bold">Foto: </label>
-            <input type="file" class="form-control-file" id="fileCaminhoFoto">
+            <input type="file" class="form-control-file" id="fileCaminhoFoto[]" data-show-upload="true" data-show-caption="true" multiple>
+
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-md-12">
+            <div class="file-loading">
+                <label>Foto: </label>
+                <input id="file-3" type="file" multiple>
+            </div>
         </div>
     </div>
 
-    
+
 }
 
 <script>
     $(document).ready(function () {
+        // Máscara do campo valor
         $('#txtValor').mask('000.000.000.000.000,00', { reverse: true });
+
+        // File upload
+        $("#file-3").fileinput({
+            theme: 'fas',
+            language:'pt-BR',
+            showUpload: true,
+            showCaption: true,
+            browseClass: "btn btn-primary",
+            fileType: "any",
+            previewFileIcon: "<i class='glyphicon glyphicon-king'></i>",
+            overwriteInitial: false,
+            initialPreviewAsData: true,
+            initialPreview: [
+                "http://lorempixel.com/1920/1080/transport/1",
+                "http://lorempixel.com/1920/1080/transport/2",
+                "http://lorempixel.com/1920/1080/transport/3"
+            ],
+            initialPreviewConfig: [
+                { caption: "transport-1.jpg", size: 329892, width: "120px", url: "{$url}", key: 1 },
+                { caption: "transport-2.jpg", size: 872378, width: "120px", url: "{$url}", key: 2 },
+                { caption: "transport-3.jpg", size: 632762, width: "120px", url: "{$url}", key: 3 }
+            ]
+        });
     });
 </script>
 
