--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Shared/_LayoutCadastro.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Shared/_LayoutCadastro.cshtml
@@ -13,6 +13,10 @@
     @Scripts.Render("~/bundles/DataTable")
     @Scripts.Render("~/bundles/sweetalert")
     @Scripts.Render("~/bundles/jqueryMask")
+    @Scripts.Render("~/bundles/fileinput")
+    @Scripts.Render("~/bundles/fasTheme")
+    @Scripts.Render("~/bundles/fasThemefileinput")
+    @Scripts.Render("~/bundles/fileInputPt-BR")
     @Scripts.Render("~/bundles/modernizr")
     @Styles.Render("~/Content/css")
     @RenderSection("scripts", required: false)
