--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Produto/Index.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Produto/Index.cshtml
@@ -1,6 +1,4 @@
-﻿@model IEnumerable<ArDesignForminhas_Web.Models.Produto>
-
-@{
+﻿@{
     Layout = "~/Views/Shared/_LayoutCadastro.cshtml";
     ViewBag.Title = "Cadastro de Produtos";
 }
@@ -19,96 +17,22 @@
 
 <div class="row">
     <div class="col-md-12">
-        <table id="gridProduto" class="uk-table uk-table-hover uk-table-striped" style="width:100%">
-            <thead>
-                <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Codigo)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Nome)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Valor)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.CaminhoFoto)
-                    </th>
-                    <th>
-                        &nbsp;
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelitem => item.Codigo)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelitem => item.Nome)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelitem => item.Valor)
-                        </td>
-                        <td>
-                            <img src="@item.CaminhoFoto" width="50" height="20" />
-                        </td>
-                        <td class="d-flex justify-content-end">
-                            <div class="button-group">
-                                @Html.ActionLink(" ", "Editar", "Produto", new { id = item.Codigo }, new { @class = "fas fa-edit" })
-                                <button type="button" CommandArgument="@item.Codigo" class="btn btn-link">
-                                    <i class="fas fa-trash-alt"></i>
-                                </button>
-                            </div>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
+        <div id="grid"></div>
     </div>
 </div>
 
 
 <script>
+    var urlIndex = "@Url.Action("Listar", "Produto")";
+    var urlDelete = "@Url.Action("Delete", "Produto")"
+
+    function PreencheGrid() {
+        $("#grid").load(urlIndex, function () {
+        });
+    }
+
     $(document).ready(function () {
-        $('#gridProduto').DataTable({
-            language: {
-                url: "../Scripts/plugin/dataTables.Portuguese-Brasil.json"
-            }
-        });
-
-        $('.btn').click(function (e) {
-            if ($(this)[0].innerText != " Cadastrar") {
-                var url = "@Url.Action("Delete", "Produto")";
-                var valor = $(this).attr("CommandArgument");
-
-                url += "/" + valor
-
-                swal({
-                    title: "Realmente deseja excluir o produto?",
-                    text: "Não será possível desfazer esta alteração!",
-                    type: "warning",
-                    showCancelButton: true,
-                    confirmButtonClass: "btn-danger",
-                    confirmButtonText: "Sim",
-                    cancelButtonText: "Não",
-                    closeOnConfirm: false,
-                    closeOnCancel: true,
-                    showLoaderOnConfirm: true
-                },
-                    function () {
-                        $.post(url, function (data) {
-                            var response = JSON.parse(data);
-                            if (response.Status == 200)
-                                swal("", "Produto excluido com sucesso.", "success");
-                            else
-                                swal("Ocorreu um erro ao excluir o produto.", "O erro foi: " + response.Mensagem, "error");
-                        });
-                    });
-            }
-        });
+        PreencheGrid();
     });
 
 </script>
