--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Categoria/Index.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Categoria/Index.cshtml
@@ -9,7 +9,7 @@
         <h2>Categorias</h2>
     </div>
     <div class="col-md-3 d-flex justify-content-end">
-        @Html.ActionLink(" Cadastrar", "Cadastrar", "Categoria", new { @class = "btn btn-outline-primary fas fa-plus-square" })
+        @Html.ActionLink(" Cadastrar", "Cadastrar", "Categoria", null, new { @class = "btn btn-outline-primary fas fa-plus-square" })
     </div>
 </div>
 <br />
