--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Categoria/_Listar.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Categoria/_Listar.cshtml
@@ -2,7 +2,7 @@
 
 @if (Model.Count() <= 0)
 {
-    <span>Não há setores cadastrados</span>
+    <span>Não há categorias cadastradas</span>
 }
 else
 {
