--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Shared/_LayoutCadastro.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Shared/_LayoutCadastro.cshtml
@@ -34,7 +34,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
-                    <li class="p-2">@Html.ActionLink("Imagem Home", "Index", "ImagemHome", null, new { @class= "link" })</li>
+                    <li class="p-2">@Html.ActionLink("Imagem Home", "Index", "Banner", null, new { @class= "link" })</li>
                     <li class="p-2">@Html.ActionLink("Categoria", "Index", "Categoria", null, new { @class = "link" })</li>
                     <li class="p-2">@Html.ActionLink("Produto", "Index", "Produto",null, new { @class = "link" })</li>
                 </ul>
