--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Banner/_Listar.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Banner/_Listar.cshtml
@@ -31,8 +31,9 @@ else
                     <td>
                         @Html.DisplayFor(modelitem => item.Codigo)
                     </td>
-                    <td>
-                        @Html.DisplayFor(modelitem => item.Caminho)
+                    <td class="w-50">
+                        <img src=@Html.DisplayFor(modelitem => item.Caminho) alt="" style="width:40%" />
+                        
                     </td>
                     <td>
                         @Html.DisplayFor(modelitem => item.EhHome)
