Correção de bug ao salvar caminho do arquivo de banner Criação da tela de detalhes de produto

--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Home/Index.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Home/Index.cshtml
@@ -11,7 +11,7 @@
 <div class="container body-content">
 
     <section>
-        @Html.Partial("_Destaque")
+        @Html.Partial("_Destaque", Model.ListaProdutoDestaque)
     </section>
 
 </div>
