--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Categoria/_Listar.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Categoria/_Listar.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<ArDesignForminhas_Web.Models.Categoria>
+﻿
+@model IEnumerable<ArDesignForminhas_Web.Models.Categoria>
 
 @if (Model.Count() <= 0)
 {
