--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Categoria/Editar.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Categoria/Editar.cshtml
@@ -1,13 +1,15 @@
 ﻿@model ArDesignForminhas_Web.Models.Categoria
+
 @{
-    Layout = "~/Views/Shared/_LayoutCadastro.cshtml";
+    Layout = "~/Areas/Administracao/Views/Shared/_LayoutCadastro.cshtml";
 }
 
-@using (Html.BeginForm("Cadastrar", "Categoria", FormMethod.Post))
+
+@using (Html.BeginForm("Editar", "Categoria", FormMethod.Post))
 {
     <div class="row">
         <div class="col-md-9">
-            <h2>Cadastro de Categorias</h2>
+            <h2>Edição de Categorias</h2>
         </div>
         <div class="col-md-3 d-flex justify-content-end">
             <button type="submit" class="btn btn-outline-primary">
@@ -22,6 +24,12 @@
     <br />
     <div class="row">
         <div class="form-group col-md-12">
+            <label class="font-weight-bold">Código: </label>
+            @Html.TextBoxFor(model => model.Codigo, new { @class = "form-control", @readonly = "readonly" })
+        </div>
+    </div>
+    <div class="row">
+        <div class="form-group col-md-12">
             <label class="font-weight-bold">Nome: </label>
             @Html.TextBoxFor(model => model.Nome, new { @class = "form-control" })
         </div>
@@ -29,7 +37,7 @@
     <div class="row">
         <div class="form-group col-md-12">
             <label class="font-weight-bold">Descrição: </label>
-            @Html.TextAreaFor(model => model.Descricao, new {@class= "form-control", rows = "3" })
+            @Html.TextAreaFor(model => model.Descricao, new { @class = "form-control", rows = "3" })
         </div>
     </div>
 }
