--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Produto/_Listar.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Areas/Administracao/Views/Produto/_Listar.cshtml
@@ -1,23 +1,23 @@
-﻿@model IEnumerable<ArDesignForminhas_Web.Models.Banner >
+﻿@model IEnumerable<ArDesignForminhas_Web.Models.Produto>
 
 @if (Model.Count() <= 0)
 {
-    <span>Não há Banner cadastrados</span>
+    <span>Não há produtos cadastradas</span>
 }
 else
 {
 
-    <table id="gridBanner" class="uk-table uk-table-hover uk-table-striped" style="width:100%">
+    <table id="gridProduto" class="uk-table uk-table-hover uk-table-striped" style="width:100%">
         <thead>
             <tr>
                 <th>
                     @Html.DisplayNameFor(model => model.Codigo)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.Caminho)
+                    @Html.DisplayNameFor(model => model.Nome)
                 </th>
                 <th>
-                    @Html.DisplayNameFor(model => model.EhHome)
+                    @Html.DisplayNameFor(model => model.Valor)
                 </th>
                 <th>
                     &nbsp;
@@ -31,16 +31,15 @@ else
                     <td>
                         @Html.DisplayFor(modelitem => item.Codigo)
                     </td>
-                    <td class="w-50">
-                        <img src=@Html.DisplayFor(modelitem => item.Caminho) alt="" style="width:40%" />
-                        
+                    <td>
+                        @Html.DisplayFor(modelitem => item.Nome)
                     </td>
                     <td>
-                        @Html.DisplayFor(modelitem => item.EhHome)
+                        @Html.DisplayFor(modelitem => item.Valor)
                     </td>
                     <td class="d-flex justify-content-end">
                         <div class="button-group">
-                            @Html.ActionLink(" ", "Editar", "Banner", new { id = item.Codigo }, new { @class = "fas fa-edit" })
+                            @Html.ActionLink(" ", "Editar", "Produto", new { id = item.Codigo }, new { @class = "fas fa-edit" })
                             <button type="button" CommandArgument="@item.Codigo" class="btn btn-link">
                                 <i class="fas fa-trash-alt"></i>
                             </button>
@@ -52,4 +51,5 @@ else
     </table>
 }
 
-<script src="~/Scripts/Cadastro/Banner/Listar.js"></script>
+<script src="~/Scripts/Cadastro/Produto/Listar.js"></script>
+
