--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Home/Index.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Home/Index.cshtml
@@ -9,9 +9,8 @@
 </section>
 
 <div class="container body-content">
-
-    <section>
+    <section class="py-12">
         @Html.Partial("_Destaque", Model.ListaProdutoDestaque)
     </section>
-
 </div>
+
