--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Categoria/detalhes.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Categoria/detalhes.cshtml
@@ -18,52 +18,43 @@
                 <h5>teste</h5>
             </div>
             <div class="col-md-9">
+                @{
+                    int linha = 0;
+                    int coluna = 0;
+                    if ((Model.listaProdutos.Count % 3) > 0)
+                    {
+                        linha = Model.listaProdutos.Count / 3 + 1;
+                    }
+                    else
+                    {
+                        linha = Model.listaProdutos.Count / 3;
+                    }
 
-
-
-
-                <div class="row" align="center">
-                    <div class="col-md-4">
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-img-top">
-                                <img class="d-block w-100" src="#" width="286px" height="286px" />
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">Teste</h5>
-                                <p class="card-text">Vamos que vamos</p>
-                                <a href="#" class="btn btn-primary">Detalhes</a>
-                            </div>
+                    for (int i = 0; i <= linha; i++)
+                    {
+                        <div class="row" align="center">
+                            @foreach (var produto in Model.listaProdutos.Skip(coluna).Take(3))
+                            {
+                                <div class="col-md-4">
+                                    <div class="card" style="width: 18rem;">
+                                        <div class="card-img-top">
+                                            <img class="d-block w-100" src="@Html.DisplayFor(img => produto.Imagens.First().Caminho)" width="286px" height="286px" />
+                                        </div>
+                                        <div class="card-body">
+                                            <h5 class="card-title">@Html.DisplayFor(p => produto.Nome)</h5>
+                                            <p class="card-text">R$ @Html.DisplayFor(p => produto.Valor)</p>
+                                            @Html.ActionLink(" Detalhes", "detalhes", "Produto", new { id = produto.Codigo }, new { @class = "btn btn-outline-primary" })
+                                        </div>
+                                    </div>
+                                </div>
+                            }
                         </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-img-top">
-                                <img class="d-block w-100" src="#" width="286px" height="286px" />
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">Teste</h5>
-                                <p class="card-text">Vamos que vamos</p>
-                                <a href="#" class="btn btn-primary">Detalhes</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card" style="width: 18rem;">
-                            <div class="card-img-top">
-                                <img class="d-block w-100" src="#" width="286px" height="286px" />
-                            </div>
-                            <div class="card-body">
-                                <h5 class="card-title">Teste</h5>
-                                <p class="card-text">Vamos que vamos</p>
-                                <a href="#" class="btn btn-primary">Detalhes</a>
-                            </div>
-                        </div>
-                    </div>
+                        coluna += 3;
+                    }
+                }
                 </div>
             </div>
         </div>
-        <h2>Encontrou @Html.DisplayFor(m => Model.listaProdutos.Count) produtos desta categoria</h2>
-    </div>
-</section>
+    </section>
 
 
