--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Produto/detalhes.cshtml
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Views/Produto/detalhes.cshtml
@@ -1,26 +1,37 @@
-﻿@{
+﻿@model ArDesignForminhas_Web.Models.Produto
+
+@{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
-<div class="container">
-
-    <div class="row">
-        <div class="col-md-2">
-            <div class="row">
-                <p style="font-weight: bold"> Nome do produto </p>
+<main class="flex-fill mt-5">
+    <div class="container">
+        <div class="row g-3">
+            <div class="col-12 col-sm-6">
+                <img src="@Html.DisplayFor(model => model.Imagens.First().Caminho)" class="img-thumbnail" id="imgProduto">
+                <br class="clearfix">
+                <div class="row my-3 gx-3">
+                    @foreach (var imagem in Model.Imagens)
+                    {
+                        <div class="col-3">
+                            <img src="@Html.DisplayFor(model => imagem.Caminho)" class="img-thumbnail" onclick="trocarImagem(this)">
+                        </div>
+                    }
+                </div>
             </div>
-            <div class="row">
-                <p> Descrição do produto </p>
-            </div>
-        </div>
-        <div class="col-md-10">
-            <div class="row">
-                <p style="font-weight: bold"> Foto principal </p>
-            </div>
-            <div class="row">
-                <p> Fotos secundárias</p>
+            <div class="col-12 col-sm-6">
+                <h1>@Html.DisplayFor(model => model.Nome)</h1>
+                <p>
+                    @Html.DisplayFor(model => model.Descricao)
+                </p>
             </div>
         </div>
     </div>
-</div>
+</main>
+
+<script>
+    function trocarImagem(el) {
+        var imgProduto = document.getElementById("imgProduto");
+        imgProduto.src = el.src;
+    }
+</script>
