--- a/ArDesignForminhas_Web/ArDesignForminhas_Web/Content/Site.css
+++ b/ArDesignForminhas_Web/ArDesignForminhas_Web/Content/Site.css
@@ -65,3 +65,12 @@ select {
     font-size: 1.5rem;
     font-family: Trebuchet MS,Arial,sans-serif
 }
+
+.tituloIconSocial {
+    margin-top: 1.5rem;
+    margin-bottom:1.5rem;
+}
+.iconSocial {
+    color: #a6a6a6 !important;
+    font-size:25px;
+}
